<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linearLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" 
	android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalygdibayar"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTotalBayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16dp" />
    
    <TextView
	    android:id="@+id/text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Nomor Kartu Kredit" />

	<EditText
	    android:id="@+id/etNomor"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:maxLength="16" />

	<TextView
	    android:id="@+id/text2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Password Kartu Kredit" />

	<EditText
	    android:id="@+id/etPswd"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:maxLength="8" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btBayarSekarang"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/byrsekarang" />

		<Button
		    android:id="@+id/btBatal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/batal" />

	</LinearLayout>
        
</LinearLayout>